--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
     "@babel/runtime": "^7.8.4",
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
     "babel-loader": "^8.0.6",
     "exports-loader": "^0.7.0",
     "imports-loader": "^0.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
