--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fbc-frontend",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Frontend project for Fosterburg Baptist Church website",
   "main": "index.js",
   "scripts": {
@@ -22,18 +22,23 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
     "@babel/runtime": "^7.9.2",
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "babel-loader": "^8.1.0",
     "clsx": "^1.1.0",
     "exports-loader": "^0.7.0",
     "imports-loader": "^0.8.0",
+    "moment": "2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "whatwg-fetch": "^3.0.0"
+    "redux-thunk": "^2.3.0",
+    "redux-meta": "https://github.com/BrianT1414/redux-meta.git",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
